refactor(decisions): using RuleFragment as a basis for the Rule's outcomes
Refs: #154